--- a/main/index.html
+++ b/main/index.html
@@ -12,30 +12,24 @@
 
     <header>
         <a id = "highscore" href="highscore.html">View High Scores</a>
-        <h2 id = "countdown"></h2>
+        <h3 id = "countdown">Time: 60</h3>
     </header>
     
     
     <div id = "main-page">
         <h1>🌍 Welcome to the Ultimate Geography Quiz Challenge! 🗺</h1>
         <p>Answer each question to the best of your abilities.</p>
-        <p>You have 60 seconds to try and answer all 5 questions.</p>
+        <p>You have 60 seconds to try and answer all 4 questions.</p>
         <p>If you answer a question incorrectly, 10 seconds will be deducted from the remaining time.</p>
         <h3>Good Luck!</h3>
-        <button id = "startBtn">Click here to begin</button>
+        <button id = "startBtn" onclick="startGame()">Click here to begin</button>
     </div>
 
-
-    <div id = "quiz-area"></div>
-
-        <ul>
-            <h4 id = "question"></h4>
-            <li><button id = "option1"></button></li>
-            <li><buttonid id = "option2"></button></li>
-            <li><button id = "option3"></button></li>
-            <li><button id = "option4"></button></li>
-        </ul>
-
+    <div id="container">
+        <div><span id="numRight"></span><span id="numQuestions"></span></div>
+        <div id="question"></div>
+        <div id="answers"></div>
+    </div>
 
 
     <script src = "../assets/js/main.js"></script>
