--- a/main/index.html
+++ b/main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz!</title>
+    <title>🌎 Quiz!</title>
     <link rel="stylesheet" href="../assets/css/main.css" />
     <link rel="stylesheet" href="../assets/css/reset.css">
 </head>
@@ -25,10 +25,14 @@
         <button id = "startBtn" onclick="startGame()">Click here to begin</button>
     </div>
 
-    <div id="container">
-        <div><span id="numRight"></span><span id="numQuestions"></span></div>
-        <div id="question"></div>
-        <div id="answers"></div>
+    <div id = "quiz-area">
+        <h3 id = "question"></h3>
+        <ul id = "option-list">
+            <li id = "option1"></li>
+            <li id = "option2"></li>
+            <li id = "option3"></li>
+            <li id = "option4"></li>
+        </ul>
     </div>
 
 
