--- a/main/highscore.html
+++ b/main/highscore.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High Scores</title>
-    <link rel="stylesheet" href="../assets/css/highscore.css" />
+    <link rel="stylesheet" href="../assets/css/main.css" />
     <link rel="stylesheet" href="../assets/css/reset.css">
 </head>
 <body>
-    
+    <h1>Highscores</h1>
 
 
 
