Quiz is working, calculates score

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
     <div id="quiz-area">
-        <div>Score: <span id="score">0</span></div>
+        <div id = "display-score">Score: <span id="score"></span></div>
         <h3 id="question"></h3>
         <div id = "answers"></div>
     </div>
