--- a/main/highscore.html
+++ b/main/highscore.html
@@ -9,7 +9,13 @@
     <link rel="stylesheet" href="../assets/css/reset.css">
 </head>
 <body>
-    <h1>Highscores</h1>
+    <h1>Current Highscore</h1>
+
+    <div>
+        <h3 id = "current-high-score"></h3>
+    </div>
+
+    <div id = "play-again"></div>
 
 
 
